<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="settings_content_description_back_button">Назад</string>
    <string name="settings_content_description_avatar">Картинка профиля</string>

    <string name="settings_log_in">Войти</string>

    <string name="settings_title_style">Оформление</string>
    <string name="settings_title_night_theme">Темная тема</string>
    <string name="settings_title_light_theme">Светлая тема</string>
    <string name="settings_title_system_theme">По выбору системы</string>

    <string name="settings_title_notifications">Уведомления</string>
    <string name="settings_title_foreground_notification">Обновляемое уведомление</string>
    <string name="settings_text_foreground_notification">Показывает время до начала/конца пары</string>
    <string name="settings_title_time_base_notification">Уведомление перед парой</string>
    <string name="settings_text_time_base_notification">Уведомяет за 15 минут до начала пары</string>

    <string name="settings_title_backup">Резервная копия</string>
    <string name="settings_title_backup_create">Резервное копирование</string>
    <string name="settings_text_backup_create">Создать резервную копию</string>
    <string name="settings_title_backup_restore">Восстановление</string>
    <string name="settings_text_backup_restore">Восстановить из резервной копии</string>
    <string name="settings_toast_backup_create_error">Резервное копирование не удалось</string>
    <string name="settings_toast_backup_restore_error">Восстановление не удалось</string>
    <string name="settings_toast_backup_create_success">Резервное копирование прошло успешно</string>
    <string name="settings_toast_backup_restore_success">Восстановление прошло успешно</string>
</resources>