<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="ru.fevgenson.timetable.features.settings.presentation.style.SettingsStyleViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_create_lesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_20">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/settings_content_description_back_button"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:tint="?attr/colorOnSurface" />

                <TextView
                    android:id="@+id/toolbar_title"
                    style="@style/ApplicationTheme.Title3DarkGrey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_60"
                    android:text="@string/settings_title_style" />
            </FrameLayout>
        </com.google.android.material.appbar.MaterialToolbar>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            app:theme="@={viewModel.selectedTheme}">

            <RadioButton
                android:id="@+id/dark_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_title_night_theme" />

            <RadioButton
                android:id="@+id/light_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_title_light_theme" />

            <RadioButton
                android:id="@+id/system_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_title_system_theme" />
        </RadioGroup>
    </LinearLayout>
</layout>