<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="ru.fevgenson.timetable.features.settings.presentation.SettingsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_10">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:contentDescription="@string/settings_content_description_avatar"
            android:src="@drawable/ic_account_circle_24" />

        <TextView
            style="@style/ApplicationTheme.Title1Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings_log_in" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_20"
            android:background="?android:attr/listDivider" />

        <TextView
            style="@style/ApplicationTheme.Body1Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="@dimen/padding_10"
            android:focusable="true"
            android:gravity="center_vertical"
            android:onClick="@{() -> viewModel.onStyleClick()}"
            android:padding="@dimen/padding_10"
            android:text="@string/settings_title_style"
            app:drawableStartCompat="@drawable/ic_palette_24px"
            app:drawableTint="?attr/colorPrimary" />

        <TextView
            style="@style/ApplicationTheme.Body1Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="@dimen/padding_10"
            android:focusable="true"
            android:gravity="center_vertical"
            android:onClick="@{() -> viewModel.onNotificationsClick()}"
            android:padding="@dimen/padding_10"
            android:text="@string/settings_title_notifications"
            app:drawableStartCompat="@drawable/ic_notifications_24"
            app:drawableTint="?attr/colorPrimary" />
    </LinearLayout>
</layout>