<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="ru.fevgenson.timetable.features.settings.presentation.backup.SettingsBackupViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            app:backupUiState="@{viewModel.uiStateLiveData}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:backupUiState="@{viewModel.uiStateLiveData}">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_create_lesson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/padding_20">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/settings_content_description_back_button"
                        android:onClick="@{() -> viewModel.onBackButtonPressed()}"
                        android:src="@drawable/ic_baseline_arrow_back_24"
                        app:tint="?attr/colorOnSurface" />

                    <TextView
                        style="@style/ApplicationTheme.Title3DarkGrey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_60"
                        android:text="@string/settings_title_backup" />
                </FrameLayout>
            </com.google.android.material.appbar.MaterialToolbar>

            <LinearLayout
                android:id="@+id/button_create_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{() -> viewModel.onCreateBackupClick()}"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/padding_20"
                android:paddingVertical="@dimen/padding_10">

                <TextView
                    style="@style/ApplicationTheme.Body1Black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title_backup_create" />

                <TextView
                    style="@style/ApplicationTheme.Body2Grey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:text="@string/settings_text_backup_create" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_restore_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{() -> viewModel.onRestoreBackupClick()}"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/padding_20"
                android:paddingVertical="@dimen/padding_10">

                <TextView
                    style="@style/ApplicationTheme.Body1Black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title_backup_restore" />

                <TextView
                    style="@style/ApplicationTheme.Body2Grey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:text="@string/settings_text_backup_restore" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>